--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Hourglass",
   "short_name": "Hourglass",
   "description": "Watch time pass, choose how to live.",
-  "start_url": "./time-tracker.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
@@ -24,3 +24,4 @@
   "categories": ["productivity", "utilities"],
   "lang": "en"
 }
+
